[gd_scene load_steps=7 format=3 uid="uid://bvlfpjyp6863o"]

[ext_resource type="Script" path="res://tree scripts/cocoa tree.gd" id="1_v860k"]
[ext_resource type="Texture2D" uid="uid://chwcjto27l2rx" path="res://Assets/tree assets/cocoa_tree.PNG" id="2_n8xdm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pbq8e"]
atlas = ExtResource("2_n8xdm")
region = Rect2(240, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_cm6sc"]
atlas = ExtResource("2_n8xdm")
region = Rect2(480, 0, 240, 240)

[sub_resource type="SpriteFrames" id="SpriteFrames_4uiqu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbq8e")
}],
"loop": true,
"name": &"cocoa",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cm6sc")
}],
"loop": true,
"name": &"no cocoa",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pwhdq"]
radius = 136.0

[node name="cocoa tree" type="Node2D"]
script = ExtResource("1_v860k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4uiqu")
animation = &"cocoa"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_pwhdq")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
